<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#5599FF"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ToolBar"
    >
</android.support.v7.widget.Toolbar>