<resources>
    <string name="app_name">Taiwan Air Quality Index</string>
    <string name="unit">°C</string>
    <string name="cityName">Beitou</string>

    <string name="good"> Good</string>
    <string name="normal"> Moderate</string>
    <string name="notgood1" > Warning</string>
    <string name="nothealth"> Unhealthy</string>
    <string name="nogood"> Very Unhealthy</string>
    <string name="dangerous"> Hazardous</string>
    <string name="error"> data incorrect</string>


    <string name="open_navigation">Open Navigation</string>
    <string name="close_navigation">Close Navigation</string>


    <string name="tAll">Taiwan</string>
    <string name="tKeelung">Keelung City</string>
    <string name="tNewTaipei">New Taipei City</string>
    <string name="tTaipei">Taipei City</string>
    <string name="tTaoyuan">Taoyuan City</string>
    <string name="tHsinchuB">Hsinchu</string>
    <string name="tHsinchu">Hsinchu City</string>
    <string name="tMiaoliB">Miaoli</string>
    <string name="tTaichung">Taichung City</string>
    <string name="tChanghuaB">Changhua</string>
    <string name="tNantouB">Nantou</string>
    <string name="tYunlinB">Yunlin</string>
    <string name="tKaohsiung">Kaohsiung City</string>
    <string name="tPingtungB">Pingtung</string>
    <string name="tHualienB">Hualien</string>
    <string name="tYilan">Yilan</string>
    <string name="tChiayiB">Chiayi</string>
    <string name="tChiayi">Chiayi City</string>
    <string name="tTainan">Tainan City</string>
    <string name="tTaitung">Taitung</string>
    <string name="tPenghuB">Penghu</string>
    <string name="tLienchiangB">Lienchiang</string>
    <string name="tKinmen">Kinmen</string>

    <string name="info">台灣空氣品質查詢</string>

    <string name="noNetworkInfo">Network does not work \n Please try again later</string>

</resources>
